Update relative links in index.html files

--- a/home/index.html
+++ b/home/index.html
@@ -26,33 +26,33 @@
 			<div class="px-3 py-2 text-bg-dark border-bottom">
 				<div class="container">
 					<div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-						<a href="/" class="d-flex align-items-center my-2 my-lg-0 me-lg-auto text-white text-decoration-none">
+						<a href class="d-flex align-items-center my-2 my-lg-0 me-lg-auto text-white text-decoration-none">
 							<i class="bi bi-person-bounding-box" style="font-size: 2rem;"></i>
 						</a>
 						
 						<ul class="nav col-12 col-lg-auto my-2 justify-content-center my-md-0 text-small">
 							<li>
-								<a href="#" class="nav-link text-secondary">
+								<a href class="nav-link text-secondary">
 									<i class="bi bi-house-door" style="font-size: 1.5rem;"></i> Home
 								</a>
 							</li>
 							<li>
-								<a href="#" class="nav-link text-white">
+								<a href class="nav-link text-white">
 									<i class="bi bi-speedometer2" style="font-size: 1.5rem;"></i> Dashboard
 								</a>
 							</li>
 							<li>
-								<a href="#" class="nav-link text-white">
+								<a href class="nav-link text-white">
 									<i class="bi bi-table" style="font-size: 1.5rem;"></i> Orders
 								</a>
 							</li>
 							<li>
-								<a href="#" class="nav-link text-white">
+								<a href class="nav-link text-white">
 									<i class="bi bi-grid" style="font-size: 1.5rem;"></i> Products
 								</a>
 							</li>
 							<li>
-								<a href="#" class="nav-link text-white">
+								<a href class="nav-link text-white">
 									<i class="bi bi-person-circle" style="font-size: 1.5rem;"></i> Customers
 								</a>
 							</li>
