--- a/login/index.html
+++ b/login/index.html
@@ -228,7 +228,7 @@
 					};
 					
 					if (validCredentials[username] && validCredentials[username] === password) {
-						window.location.href = '/../home/index.html';
+						window.location.href = './../home/index.html';
 					} else {
 						let toastContainer = document.getElementById('toastContainer');
 						
