--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	
 	<div class="col-lg-8 mx-auto p-4 py-md-5">
 		<header class="d-flex align-items-center pb-3 mb-5 border-bottom">
-			<a href="/" class="d-flex align-items-center text-body-emphasis text-decoration-none">
+			<a href class="d-flex align-items-center text-body-emphasis text-decoration-none">
 				<i class="bi bi-person-bounding-box" style="font-size: 4rem; color: cornflowerblue;"></i>
 				<h2 class="m-auto p-3">Sample for Testing</h2>
 			</a>
@@ -73,7 +73,7 @@
 					<p>Pages already created in this project.</p>
 					<ul class="list-unstyled ps-0">
 						<!-- <li><a href="/home/" class="text-body-secondary">Home</a></li> -->
-						<li><a href="/login/" class="text-body-secondary">Login</a></li>
+						<li><a href="./login/" class="text-body-secondary">Login</a></li>
 					</ul>
 				</div>
 				
